(SIMP-5578) 6.3 Changelog (#271)
  - update the change log for SIMP 6.3

SIMP-5578 # close